# counter.dev-rewrite

./: .env  .env.example  .gitignore  APP.md  Makefile  README.md  apples.md  compose.yaml  go.mod  main.go  pyproject.toml  sqlc.yaml  tern.conf
accounts/: models.py  (+2 more)
backend/: Dockerfile  Dockerfile.orig  apples.md  compose.yaml  manage.py  pyproject.toml
backend/accounts/: admin.py  models.py  views.py
backend/accounts/migrations/: 0002_user_allowed_domains_user_filter_allowed_domains.py
backend/core/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/core/management/commands/: ingress.py  sync.py
backend/core/migrations/: 0001_initial.py  0002_initial.py  0002_remove_count_core_coun_host_id_81de43_idx_and_more.py  0002_userprofile.py  0003_remove_userprofile_avatar_remove_userprofile_bio_and_more.py  0004_rename_filter_allowed_domains_userprofile_hide_hosts_and_more.py  0005_remove_userprofile_email.py  0006_userprofile_uuid.py
backend/core/tests/: conftest.py  test_hosts.py  test_ingress.py  test_query.py
backend/core/tests/commands/: test_ingress.py  test_sync.py
backend/counter/: serializers.py  settings.py  urls.py
backend/counter/migrations/: 0001_initial.py
backend/counter/tests/: conftest.py
backend/counts/: models.py  tests.py  urls.py  views.py
backend/counts/tests/: __init__.py  conftest.py  test_hosts.py  test_ingress.py  test_query.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_allowed_domains_user_filter_allowed_domains.py
(+186 files in other folders)
