[project]
name = "counter-dev"
version = "0.1.0"
description = "counter.dev web analytics — Django rewrite"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "counter.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
