[project]
name = "counter-dev"
version = "0.1.0"
description = "counter.dev web analytics — Django rewrite"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.3",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "redis>=7.4.0",
    "pytest-xdist>=3.8.0",
    "drf-spectacular>=0.29.0",
    "dj-rest-auth[with-social]>=7.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-django>=4.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "counter.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
